ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.0-rc9, 3.1.0
    • Affects Version/s: 3.0.0-rc7
    • Component/s: Security
    • Fully Compatible
    • ALL
    • Security [00-02-20-15]
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Fatal Assertion 17494
      
      #0  0x00007ffff7bcc20b in raise (sig=5) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
      #1  0x00000000018c2fce in mongo::breakpoint () at src/mongo/util/debugger.cpp:63
      #2  0x00000000018b8085 in mongo::fassertFailed (msgid=17494) at src/mongo/util/assert_util.cpp:165
      #3  0x00000000011ea18c in mongo::fassert (msgid=17494, testOK=false) at src/mongo/util/assert_util.h:213
      #4  0x00000000011f93b6 in mongo::scram::HMACIteration (input=0x7ffff77af3f8 <std::string::_Rep::_S_empty_rep_storage+24> "", inputLen=0, 
          salt=0x7ffff7fcaf00 "!}\223\364\307[Ss\023dI7H0", <incomplete sequence \352>, saltLen=16, iterationCount=10000, 
          output=0x7ffff7fcae00 "x\255\374\367\377\177") at src/mongo/crypto/mechanism_scram.cpp:71
      #5  0x00000000011f9503 in mongo::scram::generateSaltedPassword (hashedPassword=..., 
          salt=0x7ffff7fcaf00 "!}\223\364\307[Ss\023dI7H0", <incomplete sequence \352>, saltLen=16, iterationCount=10000, 
          saltedPassword=0x7ffff7fcae00 "x\255\374\367\377\177") at src/mongo/crypto/mechanism_scram.cpp:103
      #6  0x00000000011f9598 in mongo::scram::generateSecrets (hashedPassword=..., 
          salt=0x7ffff7fcaf00 "!}\223\364\307[Ss\023dI7H0", <incomplete sequence \352>, saltLen=16, iterationCount=10000, 
          storedKey=0x7ffff7fcafb0 "Я\374\367\377\177", serverKey=0x7ffff7fcafd0 "\240B@\003") at src/mongo/crypto/mechanism_scram.cpp:121
      #7  0x00000000011f976d in mongo::scram::generateCredentials (hashedPassword=..., iterationCount=10000)
          at src/mongo/crypto/mechanism_scram.cpp:168
      #8  0x00000000012f41a3 in mongo::CmdCreateUser::run (this=0x286a5e0 <mongo::cmdCreateUser>, txn=0x7ffff7fcc7d0, dbname=..., cmdObj=..., 
          options=0, errmsg=..., result=..., fromRepl=false) at src/mongo/db/commands/user_management_commands.cpp:443
      #9  0x000000000133258f in mongo::_execCommand (txn=0x7ffff7fcc7d0, c=0x286a5e0 <mongo::cmdCreateUser>, dbname=..., cmdObj=..., 
          queryOptions=0, errmsg=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1273
      #10 0x000000000133350c in mongo::Command::execCommand (txn=0x7ffff7fcc7d0, c=0x286a5e0 <mongo::cmdCreateUser>, queryOptions=0, 
          cmdns=0x33f5014 "$external.$cmd", cmdObj=..., result=..., fromRepl=false) at src/mongo/db/dbcommands.cpp:1489
      #11 0x0000000001333deb in mongo::_runCommands (txn=0x7ffff7fcc7d0, ns=0x33f5014 "$external.$cmd", _cmdobj=..., b=..., anObjBuilder=..., 
          fromRepl=false, queryOptions=0) at src/mongo/db/dbcommands.cpp:1561
      #12 0x0000000001535d2a in mongo::runCommands (txn=0x7ffff7fcc7d0, ns=0x33f5014 "$external.$cmd", jsobj=..., curop=..., b=..., 
          anObjBuilder=..., fromRepl=false, queryOptions=0) at src/mongo/db/query/find.cpp:137
      #13 0x0000000001537d52 in mongo::runQuery (txn=0x7ffff7fcc7d0, m=..., q=..., nss=..., curop=..., result=..., fromDBDirectClient=false)
          at src/mongo/db/query/find.cpp:606
      #14 0x000000000143defa in mongo::receivedQuery (txn=0x7ffff7fcc7d0, c=..., dbresponse=..., m=..., fromDBDirectClient=false)
          at src/mongo/db/instance.cpp:220
      #15 0x000000000143f0a4 in mongo::assembleResponse (txn=0x7ffff7fcc7d0, m=..., dbresponse=..., remote=..., fromDBDirectClient=false)
          at src/mongo/db/instance.cpp:403
      #16 0x000000000113f4f8 in mongo::MyMessageHandler::process (this=0x30b80f8, m=..., port=0x30df7a0, le=0x33fc370) at src/mongo/db/db.cpp:206
      #17 0x00000000018e11c2 in mongo::PortMessageServer::handleIncomingMsg (arg=0x30df7a0) at src/mongo/util/net/message_server_port.cpp:229
      #18 0x00007ffff7bc4182 in start_thread (arg=0x7ffff7fcd700) at pthread_create.c:312
      #19 0x00007ffff6cc500d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      Version: 94cb08d1d1a14733ebe

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: