SERVER-17125 Avoid creating password credentials for $external

(cherry picked from commit 8b6c594ca13a689c65c29a645ae6f4af97b1f9bd)